--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.19",
+    "prettier": "2.8.1",
     "tailwindcss": "^3.2.4"
   }
 }
